// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Onboarding/Field Multiple Field 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Name
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_name"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hvcwgq"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                      >
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                        >
                          <label
                            class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Email
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                        >
                          <input
                            class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                            data-testid="ds-text-input"
                            name="contact_email"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                      />
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
                      >
                        <div
                          class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
                          color="shade.950"
                          data-testid="ds-text"
                        >
                          We will reach out at this email id in case of any account related issue
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Number
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="contact_number"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Onboarding/Field Single Field 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Name
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          name="contact_name"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
